fix spacing of circlebg iphone

--- a/css/layout/media.css
+++ b/css/layout/media.css
@@ -6,7 +6,7 @@
 	.hero{padding: 111px 0;height: 600px;margin-bottom: -125px;background-attachment:local;}
 	
 	
-	#press div {padding: 0 7%;}
+	.circlebg {margin-left: 18%;}
 
 
 	
